# CourSys

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
backend/: Cargo.toml
backend/data/: deps_2025-20261.json  deps_2025-20262.json  deps_2025-20263.json  deps_2026-20271.json
backend/src/: main.rs  state.rs
backend/src/api/: error.rs  extractor.rs  mod.rs  router.rs
backend/src/api/handlers/: catalog.rs  export.rs  grade.rs  login.rs  meta.rs  mod.rs  modify.rs  online.rs  quit.rs  schedule.rs  select.rs  syllabus.rs  update.rs  user.rs
backend/src/models/: actions.rs  auth.rs  catalog.rs  grade.rs  meta.rs  mod.rs  schedule.rs  session.rs  update.rs  user.rs
backend/src/services/: auth_service.rs  catalog_service.rs  crawler_service.rs  meta_service.rs  mod.rs  session_manager.rs
backend/src/utils/: compress.rs  mod.rs  parser.rs  tis.rs
client/: package.json  pnpm-lock.yaml
client/src/: App.tsx  types.ts  utils.ts
client/src/views/: GradesView.tsx  HomeView.tsx  Login.tsx  ScheduleView.tsx  TimetableView.tsx
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  UpdateBanner.tsx  api.ts  index.css  store.ts  vite-env.d.ts
frontend/src/bindings/: CatalogRequest.ts  Class.ts  Course.ts  Dependency.ts  GradeRequest.ts  GradeResponse.ts  GradesResponse.ts  Group.ts  LoginResponse.ts  MetaResponse.ts  ModifyRequest.ts  QuitRequest.ts  ScheduleRequest.ts  ScheduleResponse.ts  SeasonGpa.ts  SelectRequest.ts  Slot.ts  UpdateRequest.ts  UserInfoResponse.ts  YearGpa.ts
frontend/src/pages/: Catalog.tsx  Grades.tsx  Home.tsx  Login.tsx  Timetable.tsx
frontend/src/pages/Planner/: BlockedModal.tsx  PlannerSidebar.tsx  SolutionModal.tsx
frontend/src/utils/: bitwise.ts  format.ts  solver.ts  worker.ts
server/: main.py  models.py  requirements.txt  tis.py
server/src/: main.py  models.py  tis.py
server/src/cache/: logic.pkl
