[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-recursion = "1.1.1"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
brotli = "8.0.3"
chrono = "0.4.45"
dashmap = "6.2.1"
futures = "0.3.32"
itertools = "0.14.0"
mime_guess = "2.0.5"
regex = "1.12.3"
reqwest = { version = "0.13.4", features = ["json", "cookies", "form", "stream"] }
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_path_to_error = "0.1.20"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "time", "sync", "fs"] }
tower-http = { version = "0.6.11", features = ["compression-full", "timeout"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ts-rs = "12.0.1"
uuid = { version = "1.23.2", features = ["v4"] }
webbrowser = "1.2.1"
